# EMNO

./: CMakeLists.txt  CMakeLists2.txt  README.md
CMake/: FindZstd.cmake
include/: Compression.hpp  Global.hpp  common.h
include/type/: TagType.hpp
src/: Compression.cpp
src/type/: TagType.cpp
test/: CMakeLists.txt  test_header.cpp
